# ai-customer-service

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_attachments_and_csat.py  0003_zh_segmentation.py  0004_handoff_priority.py  0005_canned_responses.py  0006_multi_tenant_rls.py  0007_tenant_resolution.py  0008_super_admin.py  0009_tenant_stats.py  0010_web_channel_key_unique.py  0011_tenant_for_admin_email.py
backend/app/: config.py  main.py
backend/app/agent/: context.py  events.py  runner.py
backend/app/api/: deps.py  tenant_mw.py
backend/app/channels/: base.py  web.py  wechat.py  wechat_crypto.py
backend/app/core/: clock.py  encryption.py  health.py  logging.py  metrics.py  ratelimit.py  redis_client.py  security.py  storage.py  tracing.py
backend/app/db/: base.py  session.py  tenant_context.py
backend/app/llm/: base.py  embeddings.py  factory.py  openai_provider.py  pricing.py  rerank.py  types.py
backend/app/models/: __init__.py  admin.py  config.py  conversation.py  enums.py  knowledge.py  tenant.py  usage.py
backend/scripts/: bootstrap.py  local_embedding_server.py  rag_eval.py  rag_param_eval.py  resegment_chunks.py  switch_to_local_embedding.py
backend/tests/: test_agent_image_fallback.py  test_agent_integration.py  test_channel_adapter.py  test_chunking.py  test_llm_provider.py  test_ratelimit.py  test_retrieval_and_safety.py  test_retrieval_quality.py
(+91 files in other folders)
